# mineral-

./: CMakeLists.txt  README.en.md  README.md  main.cpp  temp.cpp
Serials/: SerialPort.cpp  SerialPort.hpp
